$Id$

GENERAL:
- Adapting to Code Warrior for Windows and Macintosh.

BITBCH:
- Fixing bug.

ERR:
- Addind the tReturn item.

LSTBCH:
- Fixing bug.

LSTCTN:
- Fixing bug.

TYM:
- Fixing bug.
- Revert to version bzfore adaotation to CW.

--------
20030219
--------

GENERAL:
- Creating library 'BTS'.
- Creating library 'BTF'.
- Creating library 'LSTBCH'.
- Creating library 'LSTCTN'.

AEM:
- Adding 'Exists' method.

CPE:
- Adapting to Metrowerks Codewarrior.

IDS:
- Adapting to changes in 'STK' library.

IDXBTQ:
- Renaming 'Remove', to 'Delete' which seems more appropriate.

LST:
- Renaming 'Remove', to 'Delete' which seems more appropriate.

QUE:
- Renaming 'Remove', to 'Delete' which seems more appropriate.
- Adding 'Exists' method.
- Using the 'BCH' library instead of 'AEM' and 'UYM'.

SSNMNG:
- Adapting to changes in 'LST' library.
- Adapting to changes in 'QUE' library.

STK:
- Renaming 'Exists()' method to 'ObjectExists()', due to modification of the 'tol::NAVt' macro.

STR:
- Adding 'Insert()' method.

TOL:
- Adding the 'Exists()' method to 'NAV(t)' macro.
- Fixong bug in 'AUTO3' macro.

--------
20030104
--------

GENERAL:
- Adding 'CCH'.
- Adding 'SMA' to use in 'CCH'.
- Adding portable data types.
- Adding 'HTP' library.
- Introducing '_' prefix for internal/intermediate classes.
- Creating library 'IDS'.

AEM:
- Adding portable versions of classes.

BCH:
- Adding portable versions of classes.
- Adding 'bunch___'.
- Adapting to the new 'AUTO(x)' macros.
- Fixing spelling error.

BITBCH:
- Adapting to the new 'AUTO(x)' macros.

BSO:
- Adding the 'sign__' type.
- Adding the portable ('p_...') types.
- Removing old unused code.
- Force 'sign__' to contain only -1,0,1.

BTR:
- Adapting to the new 'AUTO(x)' macros.
- Renaming of classes and methods.

CPE:
- Adding 'CPE__USE_[VC|GCC]_WORKAROUND'.

CTN:
- Adding 'reset()' method to the item-related objects.
- Renaming to 'Sync' where needed.
- Adding GCC workaround.
- Adding VC++ workaround.